environment/kubernetes/apps-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: "apps"
  labels:
    name: "apps"
